--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "howmanybucks-backend",
-  "version": "1.0.0",
-  "description": "Backend HowManyBucks con Google Vision + SerpAPI",
+  "version": "1.1.0",
+  "description": "Backend HowManyBucks con Google Vision + SerpAPI (Shopping + condizione)",
   "main": "server.js",
   "type": "module",
   "scripts": {
