--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "axios": "^1.7.2",
+    "axios": "^1.7.2"
     "express": "^4.19.2"
     "cors": "^2.8.5"
   }
