--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "axios": "^1.7.2"
-    "express": "^4.19.2"
+    "axios": "^1.7.2",
+    "express": "^4.19.2",
     "cors": "^2.8.5"
   }
 }
